--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
 <div class="about">
     <h1 >Contact</h1><hr/>
 
-    <label for="name">First Name</label>
+    <label for="name">Name</label>
     <input type="text" id="name" name="name">
-    <label for="email">Last Name</label>
+    <label for="email">Email</label>
     <input type="text" id="email" name="email">
     <label for="message">Message</label>
     <input type="text" id="message" name="message>"
@@ -43,9 +43,15 @@
 
     <h2>Contact With Me</h2><hr/>
     <div id="">
-        <img src="assets/images/if__github_1156638 (1).png" height="128" width="128"/>
-        <img src="assets/images/if_JD-05_2224265.png" height="128" width="128"/>
-        <img src="assets/images/if_stackoverflow_64x83_175967.png" height="83" width="64"/>
+        <a href="https://github.com/ateimourpoor">
+            <img src="assets/images/if__github_1156638 (1).png" height="128" width="128"/>
+        </a>
+        <a href="https://www.linkedin.com/in/arash-teimourpoor-4a3414125">
+            <img src="assets/images/if_JD-05_2224265.png" height="128" width="128"/>
+        </a>
+        <a href="https://stackexchange.com/users/11297565/arash-teimourpoor">
+            <img src="assets/images/if_stackoverflow_64x83_175967.png" height="83" width="64"/>
+        </a>
     </div>
 </aside>
 </div>
