--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="name">
         <h1>Arash Teimourpoor</h1>
     </div>
-div
+
     <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -38,9 +38,15 @@ div
 
     <h2>Contact With Me</h2><hr/>
     <div id="">
-    <img src="assets/images/if__github_1156638 (1).png" height="128" width="128"/>
-    <img src="assets/images/if_JD-05_2224265.png" height="128" width="128"/>
-    <img src="assets/images/if_stackoverflow_64x83_175967.png" height="83" width="64"/>
+        <a href="https://github.com/ateimourpoor">
+            <img src="assets/images/if__github_1156638 (1).png" height="128" width="128"/>
+        </a>
+        <a href="https://www.linkedin.com/in/arash-teimourpoor-4a3414125">
+            <img src="assets/images/if_JD-05_2224265.png" height="128" width="128"/>
+        </a>
+        <a href="https://stackexchange.com/users/11297565/arash-teimourpoor">
+            <img src="assets/images/if_stackoverflow_64x83_175967.png" height="83" width="64"/>
+        </a>
     </div>
 </aside>
   </div>
