--- a/portfolio.html
+++ b/portfolio.html
@@ -49,13 +49,22 @@
 
         <h2>Contact With Me</h2><hr/>
         <div id="">
-            <img src="assets/images/if__github_1156638 (1).png" height="128" width="128"/>
-            <img src="assets/images/if_JD-05_2224265.png" height="128" width="128"/>
-            <img src="assets/images/if_stackoverflow_64x83_175967.png" height="83" width="64"/>
+            <a href="https://github.com/ateimourpoor">
+                <img src="assets/images/if__github_1156638 (1).png" height="128" width="128"/>
+            </a>
+            <a href="https://www.linkedin.com/in/arash-teimourpoor-4a3414125">
+                <img src="assets/images/if_JD-05_2224265.png" height="128" width="128"/>
+            </a>
+            <a href="https://stackexchange.com/users/11297565/arash-teimourpoor">
+                <img src="assets/images/if_stackoverflow_64x83_175967.png" height="83" width="64"/>
+            </a>
         </div>
     </aside>
 
 
 </body>
+<footer>
+    <h5>@ Copyright 2016 Arash Teimourpoor</h5>
+</footer>
 
 </html>
